force-app/main/default/objects/LPNR_User__c/LPNR_User__c.object-meta.xml
<CustomObject>
    <description>Junction object between learning path notification record and user objects.</description>
    <label>LPN User</label>
    <nameField>
        <displayFormat>LPN User {00000000}</displayFormat>
        <label>LPN User ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LPN Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>