force-app/main/default/objects/LPNR_User__c/fields/Active_User_Record__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Record__c</fullName>
    <description>Verifies selected user record is active.</description>
    <formula>User_Recipient__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Selected LPNR recipient has an active user record.</inlineHelpText>
    <label>Active User Record</label>
    <type>Checkbox</type>
</CustomField>