force-app/main/default/objects/LPNR_User__c/fields/Learning_Path_Notification_Record__c.field-meta.xml
<CustomField>
    <fullName>Learning_Path_Notification_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup relationship to the learning path notification record.</description>
    <inlineHelpText>Use this field to associate a user to a learning path notification record.</inlineHelpText>
    <label>Learning Path Notification ID</label>
    <referenceTo>Learning_Path_Notification_Record__c</referenceTo>
    <relationshipLabel>LPN Users</relationshipLabel>
    <relationshipName>LPNR_Users</relationshipName>
    <type>Lookup</type>
</CustomField>