force-app/main/default/objects/LPNR_User__c/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <description>User recipient&#39;s profile.</description>
    <formula>User_Recipient__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Selected LPNR recipient&#39;s profile.</inlineHelpText>
    <label>User Profile</label>
    <type>Text</type>
</CustomField>