force-app/main/default/objects/LPNR_User__c/fields/User_Recipient__c.field-meta.xml
<CustomField>
    <fullName>User_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup relationship to the User object.</description>
    <inlineHelpText>Use this field to associate a user to a learning path notification record.</inlineHelpText>
    <label>User Recipient</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active user records are available for this search.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Salesforce_License_Type__c</field>
            <operation>notEqual</operation>
            <value>Customer Community Login</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>LPNR_Users</relationshipName>
    <type>Lookup</type>
</CustomField>